"productName" = "Jot";

"deleteButton" = "Delete";
"actionButton" = "Actions";
"shareButton" = "Share";

"plainText" = "Plain text";
"swift" = "Swift";

"shareActivity" = "Share Jot";
"deleteActivity" = "Delete Jot";
"appendActivity" = "Append to Jot";
"saveActivity" = "Save Jot";

"shareKeyword" = "share";
"deleteKeyword" = "delete";
"appendKeyword" = "append";
"saveKeyword" = "save";
"noteKeyword" = "note";
