...
                                </menu>
                            </menuItem>
                            <menuItem title="File" id="JtE-EQ-tDx">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="File" systemMenu="apple" id="rbH-qt-2yU">
                                    <items>
                                        <menuItem title="Save..." keyEquivalent="s" id="xRs-Px-1uc">
                                            <connections>
                                                <action selector="onSave:" target="Voe-Tx-rLC" id="WkK-32-IYj"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="Delete All" id="XPX-Lf-Ioa">
                                            <string key="keyEquivalent" base64-UTF8="YES">
CA
</string>
                                            <connections>
                                                <action selector="onTapDeleteAll:" target="Voe-Tx-rLC" id="XKr-O1-fl9"/>
                                            </connections>
...
